server/compilers/goLiteJS/src/test/ml2/valid/binary4.go
// binary operations on literals
package main

func main() {
    _ = true || true
    _ = false && false

    _ = true == false
    _ = 23 == 23
    _ = 23.0 == 23.0
    _ = 'a' == 'a'
    _ = "asdf" == "asdf"

    _ = true != false
    _ = 23 != 23
    _ = 23.0 != 23.0
    _ = 'a' != 'a'
    _ = "asdf" != "asdf"

    _ = 23 < 23
    _ = 23.0 < 23.0
    _ = 'a' < 'a'
    _ = "asdf" < "asdf"

    _ = 23 <= 23
    _ = 23.0 <= 23.0
    _ = 'a' <= 'a'
    _ = "asdf" <= "asdf"

    _ = 23 > 23
    _ = 23.0 > 23.0
    _ = 'a' > 'a'
    _ = "asdf" > "asdf"

    _ = 23 >= 23
    _ = 23.0 >= 23.0
    _ = 'a' >= 'a'
    _ = "asdf" >= "asdf"

    _ = "asdf" + "asdf"

    _ = 23.0 + 23.0
    _ = 23.0 - 23.0
    _ = 23.0 * 23.0
    _ = 23.0 / 23.0

    _ = 23 + 23
    _ = 23 - 23
    _ = 23 * 23
    _ = 23 / 23
    _ = 23 % 23
    _ = 23 | 23
    _ = 23 & 23
    _ = 23 << 23
    _ = 23 >> 23
    _ = 23 &^ 23
    _ = 23 ^ 23

    _ = 'a' + 'a'
    _ = 'a' - 'a'
    _ = 'a' * 'a'
    _ = 'a' / 'a'
    _ = 'a' % 'a'
    _ = 'a' | 'a'
    _ = 'a' & 'a'
    _ = 'a' << 'a'
    _ = 'a' >> 'a'
    _ = 'a' &^ 'a'
    _ = 'a' ^ 'a'
}
