server/compilers/goLiteJS/src/test/ml2/invalid/binary3.go
// invalid || arguments
package main

func main() {
    _ = true || 'a'
}
